tests/snapshots/resolver_corpus__snapshot_resolver_corpus@lambda-shadow.i.snap
---
source: tests/resolver_corpus.rs
expression: "format!(\"{}\", res)"
input_file: tests/corpus/resolver/lambda-shadow.i
---
defs:
  DefId(0) x (Value)
  DefId(1) f (Value)
refs:
  33..34 -> Local(LocalId(0))
  38..39 -> Local(LocalId(0))
