tests/snapshots/resolver_corpus__snapshot_resolver_corpus@single-binding.i.snap
---
source: tests/resolver_corpus.rs
expression: "format!(\"{}\", res)"
input_file: tests/corpus/resolver/single-binding.i
---
defs:
  DefId(0) x (Value)
refs:
